# health-canada-meddev-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  BUG_CHECK_REPORT.md  CHECKPOINT_SPRINT_10.md  CHECKPOINT_SPRINT_4A.md  CHECKPOINT_SPRINT_4B.md  CHECKPOINT_SPRINT_7.md  CHECKPOINT_SPRINT_8.md  CHECKPOINT_SPRINT_9.md  CLAUDE.md  Dockerfile  HANDOFF_CORRECTED.md  Health Canada MedDev Agent_hand off plan Feb 6 1415pm.docx  MASTER_SPRINT_PLAN_v2.md  MASTER_SPRINT_PLAN_v3.md  Makefile  README.md  SPRINT_2_CHECKPOINT.md  SPRINT_3A_CHECKPOINT.md  VALIDATION_STATUS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  vercel.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  tests-daily.yml  tests-weekly.yml
api/: index.py  requirements.txt
configs/: __init__.py  settings.py
data/processed/: .gitkeep
data/raw/: .gitkeep
data/vectorstore/: .gitkeep
docs/: ARCHITECTURE.md  CHECKPOINT_SPRINT1_2026-02-07.md  CHECKPOINT_SPRINT4_COMPLETE.md  CHECKPOINT_SPRINT_3B_2026-02-07.md  CHECKPOINT_SPRINT_3C_FINAL.md  HANDOFF_SPRINT5.md  KNOWLEDGE_BASE.md  PROJECT_STATE_SNAPSHOT.md  PROJECT_STATE_SNAPSHOT_2026-02-06.docx  TESTING_PLAN.md  latest ongoing thread to take over after reading other docs.docx
docs/architecture/: REGULATORY_EXECUTION_PLATFORM_ARCHITECTURE.md  REPO_MAP.md
docs/checkpoints/: CHECKPOINT_S5A.md  CHECKPOINT_S5B.md  CHECKPOINT_S5C.md  CHECKPOINT_S6.md
pages/: 1_Readiness_Dashboard.py  2_Regulatory_Twin.py  3_Clinical_Evidence.py  4_Agent_Chat.py
scripts/: ingest_documents.py  snapshot.py  supabase_schema_v0.sql
scripts/migrations/: 2026-02-06_ai_runs_and_trace_links.sql  2026-02-06_artifacts_and_attestations.sql  2026-02-06_rls_policies_artifacts_attestations.sql  2026-02-07_regulatory_twin_core.sql
src/: __init__.py  cli.py
src/agents/: __init__.py  prompts.py  regulatory_agent.py  regulatory_twin_tools.py  tools.py
src/api/: __init__.py  gap_routes.py  main.py  traceability_routes.py
src/core/: __init__.py  attestation_service.py  checklist.py  classification.py  clinical_evidence.py  confidentiality.py  design_controls.py  evidence_ingestion.py  gap_engine.py  labeling_compliance.py  models.py  pathway.py  post_market.py  predicate_analysis.py  readiness.py  regulatory_references.py  regulatory_twin.py  traceability.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py
src/persistence/: __init__.py  ai_runs_logger.py  supabase_client.py  twin_repository.py
src/retrieval/: __init__.py  reranker.py  retriever.py  vectorstore.py
src/ui/: app.py
src/utils/: __init__.py  logging.py
supabase/: config.toml
tests/: __init__.py  conftest.py
tests/api/: test_endpoints.py  test_gap_endpoints.py  test_traceability_endpoints.py
tests/integration/: test_agent_flow.py  test_classification_flow.py  test_twin_persistence.py
tests/regulatory/: test_fees_2024.py  test_samd_matrix.py
tests/unit/: test_agent_orchestration.py  test_attestation_service.py  test_classification.py  test_clinical_evidence.py  test_confidentiality.py  test_design_controls.py  test_evidence_ingestion.py  test_gap_engine.py  test_ip_agent_tools.py  (+15 more)
