[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-canada-meddev-agent"
version = "0.1.0"
description = "AI-powered Health Canada medical device regulatory compliance assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Medical Device Regulatory Team"}
]
keywords = ["health-canada", "medical-device", "regulatory", "ai", "rag", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core LLM & Agent Framework
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.26",

    # Vector Store & Embeddings
    "chromadb>=0.4.22",
    "openai>=1.12.0",

    # Document Processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "unstructured>=0.12.0",
    "pypdf>=4.0.0",

    # API & Web
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # UI
    "streamlit>=1.31.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "supabase>=2.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.27.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]
prod = [
    "pinecone-client>=3.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "psycopg2-binary>=2.9.0",
    "sentry-sdk>=1.40.0",
]

[project.scripts]
meddev-agent = "src.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/health-canada-meddev-agent"
Documentation = "https://github.com/yourusername/health-canada-meddev-agent#readme"
Repository = "https://github.com/yourusername/health-canada-meddev-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[[tool.mypy.overrides]]
module = [
    "src.retrieval.vectorstore",
    "src.agents.regulatory_agent",
    "src.api.main",
]
ignore_errors = true
